--- a/spec/data/config.json
+++ b/spec/data/config.json
@@ -7,7 +7,7 @@
         "api key": "",
         "minimum severity": "Warning"
       }
-    }
+    } 
   },
   "pings": {
     "test url": {
@@ -20,7 +20,7 @@
       }
     },
     "bash test": {
-      "kind": "http",
+      "kind": "bash",
       "options": {
         "command": "echo test",
         "output": "test",
